--- a/ForrestCruiseApp/Base.lproj/Main.storyboard
+++ b/ForrestCruiseApp/Base.lproj/Main.storyboard
@@ -18,36 +18,35 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="kP9-YF-B0a" customClass="WeeklyGoalControl" customModule="ForrestCruiseApp" customModuleProvider="target">
-                                <rect key="frame" x="20" y="72" width="560" height="372"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                            </view>
-                            <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="6zV-0O-YVT" customClass="TrendControl" customModule="ForrestCruiseApp" customModuleProvider="target">
-                                <rect key="frame" x="20" y="452" width="560" height="91"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="91" id="bD2-2k-Dya"/>
-                                </constraints>
-                            </view>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Cwk-af-NPd">
+                                <rect key="frame" x="20" y="72" width="560" height="520"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kP9-YF-B0a" customClass="WeeklyGoalControl" customModule="ForrestCruiseApp" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="560" height="256"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6zV-0O-YVT" customClass="TrendControl" customModule="ForrestCruiseApp" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="264" width="560" height="256"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    </view>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="6zV-0O-YVT" firstAttribute="top" secondItem="kP9-YF-B0a" secondAttribute="bottom" constant="8" id="Hgt-JA-5V2"/>
-                            <constraint firstItem="kP9-YF-B0a" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="NuH-vk-JNk"/>
-                            <constraint firstItem="6zV-0O-YVT" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="SFY-Z5-wzM"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="6zV-0O-YVT" secondAttribute="bottom" constant="8" id="TAm-sc-6eW"/>
-                            <constraint firstItem="kP9-YF-B0a" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="blk-of-7zm"/>
-                            <constraint firstItem="kP9-YF-B0a" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="8" id="hMu-XY-qI4"/>
-                            <constraint firstItem="6zV-0O-YVT" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="wRs-f2-zPf"/>
+                            <constraint firstItem="Cwk-af-NPd" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="No1-r0-WPc"/>
+                            <constraint firstItem="Cwk-af-NPd" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="8" id="SwS-1V-CxB"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="Cwk-af-NPd" secondAttribute="bottom" constant="8" id="gcj-q9-o65"/>
+                            <constraint firstItem="Cwk-af-NPd" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="q86-SM-6Yk"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Weekly Goal" id="G24-GM-FnH">
-                        <barButtonItem key="leftBarButtonItem" title="View runs" id="M1m-yq-PqO">
+                        <barButtonItem key="leftBarButtonItem" title="History" id="M1m-yq-PqO">
                             <connections>
                                 <segue destination="UvB-T8-LtY" kind="show" id="3qr-mC-TiW"/>
                             </connections>
                         </barButtonItem>
-                        <barButtonItem key="rightBarButtonItem" title="Go run" id="Bhz-2k-tVU">
+                        <barButtonItem key="rightBarButtonItem" title="Run" id="Bhz-2k-tVU">
                             <connections>
                                 <segue destination="qju-8t-gis" kind="show" id="c4w-ir-Pb0"/>
                             </connections>
